connect to UI
