# pybackend/src/openapi_server/models/data_source_configuration.py
@@ -1,107 +1,0 @@
-# coding: utf-8
-
-"""
-RAG Studio API
-
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
-
-The version of the OpenAPI document: 1.0.0
-Generated by OpenAPI Generator (https://openapi-generator.tech)
-
-Do not edit the class manually.
-"""  # noqa: E501
-
-from __future__ import annotations
-import pprint
-import re  # noqa: F401
-import json
-
-
-from pydantic import BaseModel, ConfigDict, Field, StrictInt, StrictStr, field_validator
-from typing import Any, ClassVar, Dict, List
-
-try:
-    from typing import Self
-except ImportError:
-    from typing_extensions import Self
-
-
-class DataSourceConfiguration(BaseModel):
-    """
-    DataSourceConfiguration
-    """  # noqa: E501
-
-    connection_type: StrictStr = Field(description="Data source connection type")
-    chunk_size: StrictInt = Field(description="Data source chunk size")
-    chunk_overlap_percent: StrictInt = Field(
-        description="Data source chunk overlap percentage"
-    )
-    __properties: ClassVar[List[str]] = [
-        "connection_type",
-        "chunk_size",
-        "chunk_overlap_percent",
-    ]
-
-    @field_validator("connection_type")
-    def connection_type_validate_enum(cls, value):
-        """Validates the enum"""
-        if value not in ("MANUAL", "CDF", "API", "OTHER"):
-            raise ValueError(
-                "must be one of enum values ('MANUAL', 'CDF', 'API', 'OTHER')"
-            )
-        return value
-
-    model_config = {
-        "populate_by_name": True,
-        "validate_assignment": True,
-        "protected_namespaces": (),
-    }
-
-    def to_str(self) -> str:
-        """Returns the string representation of the model using alias"""
-        return pprint.pformat(self.model_dump(by_alias=True))
-
-    def to_json(self) -> str:
-        """Returns the JSON representation of the model using alias"""
-        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
-        return json.dumps(self.to_dict())
-
-    @classmethod
-    def from_json(cls, json_str: str) -> Self:
-        """Create an instance of DataSourceConfiguration from a JSON string"""
-        return cls.from_dict(json.loads(json_str))
-
-    def to_dict(self) -> Dict[str, Any]:
-        """Return the dictionary representation of the model using alias.
-
-        This has the following differences from calling pydantic's
-        `self.model_dump(by_alias=True)`:
-
-        * `None` is only added to the output dict for nullable fields that
-          were set at model initialization. Other fields with value `None`
-          are ignored.
-        """
-        _dict = self.model_dump(
-            by_alias=True,
-            exclude={},
-            exclude_none=True,
-        )
-        return _dict
-
-    @classmethod
-    def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of DataSourceConfiguration from a dict"""
-        if obj is None:
-            return None
-
-        if not isinstance(obj, dict):
-            return cls.model_validate(obj)
-
-        _obj = cls.model_validate(
-            {
-                "connection_type": obj.get("connection_type"),
-                "chunk_size": obj.get("chunk_size"),
-                "chunk_overlap_percent": obj.get("chunk_overlap_percent"),
-            }
-        )
-        return _obj
