# pybackend/src/openapi_server/models/data_source_connection_type.py
@@ -1,0 +1,43 @@
+# coding: utf-8
+
+"""
+RAG Studio API
+
+No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+
+The version of the OpenAPI document: 1.0.0
+Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+Do not edit the class manually.
+"""  # noqa: E501
+
+from __future__ import annotations
+import json
+import pprint
+import re  # noqa: F401
+from enum import Enum
+
+
+try:
+    from typing import Self
+except ImportError:
+    from typing_extensions import Self
+
+
+class DataSourceConnectionType(str, Enum):
+    """
+    Data source connection type
+    """
+
+    """
+    allowed enum values
+    """
+    MANUAL = "MANUAL"
+    CDF = "CDF"
+    API = "API"
+    OTHER = "OTHER"
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Create an instance of DataSourceConnectionType from a JSON string"""
+        return cls(json.loads(json_str))
